// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bookmarkTarget renders 0 1`] = `
Array [
  .c0 {
  bookmark-target: 0;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-target: 0;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-target: 0;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-target: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`bookmarkTarget renders function 1`] = `
Array [
  .c0 {
  bookmark-target: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-target: has;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-target: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-target: has;
}

<div
    className="c0"
  />,
]
`;

exports[`bookmarkTarget renders invalid theme path 1`] = `
Array [
  .c0 {
  bookmark-target: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-target: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-target: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-target: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`bookmarkTarget renders negative number 1`] = `
Array [
  .c0 {
  bookmark-target: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-target: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-target: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-target: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`bookmarkTarget renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  bookmark-target: July;
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-target: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-target: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-target: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    bookmark-target: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  bookmark-target: July;
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-target: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-target: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-target: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    bookmark-target: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  bookmark-target: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    bookmark-target: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-target: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-target: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    bookmark-target: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-target: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    bookmark-target: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-target: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-target: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    bookmark-target: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`bookmarkTarget renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    bookmark-target: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-target: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-target: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    bookmark-target: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    bookmark-target: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-target: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-target: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    bookmark-target: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    bookmark-target: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-target: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-target: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    bookmark-target: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    bookmark-target: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-target: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-target: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    bookmark-target: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`bookmarkTarget renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  bookmark-target: July;
}

@media May {
  .c0 {
    bookmark-target: August;
  }
}

@media April {
  .c0 {
    bookmark-target: September;
  }
}

@media January {
  .c0 {
    bookmark-target: November;
  }
}

@media April {
  .c0 {
    bookmark-target: August;
  }
}

@media June {
  .c0 {
    bookmark-target: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  bookmark-target: July;
}

@media May {
  .c0 {
    bookmark-target: August;
  }
}

@media April {
  .c0 {
    bookmark-target: September;
  }
}

@media January {
  .c0 {
    bookmark-target: November;
  }
}

@media April {
  .c0 {
    bookmark-target: August;
  }
}

@media June {
  .c0 {
    bookmark-target: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  bookmark-target: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    bookmark-target: November;
  }
}

@media April {
  .c0 {
    bookmark-target: January;
  }
}

@media January {
  .c0 {
    bookmark-target: December;
  }
}

@media April {
  .c0 {
    bookmark-target: April;
  }
}

@media June {
  .c0 {
    bookmark-target: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-target: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    bookmark-target: November;
  }
}

@media April {
  .c0 {
    bookmark-target: January;
  }
}

@media January {
  .c0 {
    bookmark-target: December;
  }
}

@media April {
  .c0 {
    bookmark-target: April;
  }
}

@media June {
  .c0 {
    bookmark-target: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`bookmarkTarget renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    bookmark-target: July;
  }
}

@media April {
  .c0 {
    bookmark-target: August;
  }
}

@media January {
  .c0 {
    bookmark-target: September;
  }
}

@media April {
  .c0 {
    bookmark-target: November;
  }
}

@media June {
  .c0 {
    bookmark-target: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    bookmark-target: July;
  }
}

@media April {
  .c0 {
    bookmark-target: August;
  }
}

@media January {
  .c0 {
    bookmark-target: September;
  }
}

@media April {
  .c0 {
    bookmark-target: November;
  }
}

@media June {
  .c0 {
    bookmark-target: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    bookmark-target: January;
  }
}

@media April {
  .c0 {
    bookmark-target: December;
  }
}

@media January {
  .c0 {
    bookmark-target: April;
  }
}

@media April {
  .c0 {
    bookmark-target: May;
  }
}

@media June {
  .c0 {
    bookmark-target: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    bookmark-target: January;
  }
}

@media April {
  .c0 {
    bookmark-target: December;
  }
}

@media January {
  .c0 {
    bookmark-target: April;
  }
}

@media April {
  .c0 {
    bookmark-target: May;
  }
}

@media June {
  .c0 {
    bookmark-target: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`bookmarkTarget renders postitive number 1`] = `
Array [
  .c0 {
  bookmark-target: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-target: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-target: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-target: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`bookmarkTarget renders string 1`] = `
Array [
  .c0 {
  bookmark-target: July;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-target: July;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-target: June;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-target: June;
}

<div
    className="c0"
  />,
]
`;

exports[`bookmarkTarget renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`bookmarkTarget renders valid theme path 1`] = `
Array [
  .c0 {
  bookmark-target: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-target: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-target: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-target: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
